tests/baselines/reference/classWithStaticFieldInParameterBindingPattern.2(strict=true,target=esnext).errors.txt
classWithStaticFieldInParameterBindingPattern.2.ts(3,6): error TS2537: Type 'undefined' has no matching index signature for type 'number'.
classWithStaticFieldInParameterBindingPattern.2.ts(3,20): error TS2373: Parameter '{ [class extends C { static x = 1 }.x]: b = "" }' cannot reference identifier 'C' declared after it.
classWithStaticFieldInParameterBindingPattern.2.ts(3,20): error TS2507: Type 'undefined' is not a constructor function type.
classWithStaticFieldInParameterBindingPattern.2.ts(6,6): error TS2537: Type 'undefined' has no matching index signature for type 'number'.
classWithStaticFieldInParameterBindingPattern.2.ts(6,57): error TS2373: Parameter 'd' cannot reference identifier 'x' declared after it.


==== classWithStaticFieldInParameterBindingPattern.2.ts (5 errors) ====
    // https://github.com/microsoft/TypeScript/issues/36295
    class C {}
    (({ [class extends C { static x = 1 }.x]: b = "" }) => { var C; })();
         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2537: Type 'undefined' has no matching index signature for type 'number'.
                       ~
!!! error TS2373: Parameter '{ [class extends C { static x = 1 }.x]: b = "" }' cannot reference identifier 'C' declared after it.
                       ~
!!! error TS2507: Type 'undefined' is not a constructor function type.
    
    const x = "";
    (({ [class extends C { static x = 1 }.x]: b = "" }, d = x) => { var x; })();
         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2537: Type 'undefined' has no matching index signature for type 'number'.
                                                            ~
!!! error TS2373: Parameter 'd' cannot reference identifier 'x' declared after it.
    